# cppn

./: .gitignore  CMakeLists.txt  Makefile  compile_commands.json  main.cpp
assets/: example.ini  main.cpp  test.txt
build-web/: CMakeCache.txt
build-win/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: CPPN.Core.Settings.ixx  CPPN.Core.ixx  CPPN.Graphics.Settings.ixx  core.hpp  cppn.h  graphics.hpp  graphics_core.hpp  graphics_general.hpp  graphics_shapes.hpp  input_core.hpp  macros.hpp
include/audio/: audio_core.hpp
include/backend/: backend.h
include/backend/Example_back/: core.h
include/backend/abstracted/: positions.h  texture.h
include/core/: core.hpp  core_event.hpp  input_core.hpp  macros.hpp
include/enums/: enums.hpp
include/filesystem/: filesystem_core.hpp  filesystem_ini.hpp  filesystem_path.hpp
include/graphics/: graphics_core.hpp  graphics_general.hpp  graphics_images.hpp  graphics_shapes.hpp  graphics_svg.hpp  graphics_utils.hpp
include/legacy_graphics/: graphics_general.hpp  graphics_shapes.hpp  graphics_svg.hpp
include/private/renderer/: renderer_private.hpp
include/shapedesigner/: core.hpp  defines.hpp  equations.hpp  shapes.hpp
include/ttfs/: text.hpp
include/utils/: other_utils.hpp  string_utils.hpp  utils.h
include/widgets/: widgets_core.hpp
tests/: main.cpp
tmp/: main.cpp
toolchains/: mingw-w64-x86_64.cmake
